extensions/kubeless/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    controller: ui
  name: ui
  namespace: kubeless
spec:
  ports:
    - name: ui-port
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    controller: ui
  sessionAffinity: None
  type: ClusterIP
