extensions/kubeless/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: ui-credentials
    # message to display with an appropiate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    # issuer for auto-cert
    certmanager.k8s.io/cluster-issuer: global-issuer
  name: ui
spec:
  rules:
    - host: $HOST
      http:
        paths:
          - backend:
              serviceName: ui
              servicePort: 80
  tls:
    - hosts:
        - $HOST
      secretName: kubeless-tls
